// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer renders default drawer 1`] = `
.c0 {
  background-color: rgba(38,38,38,1);
  color: rgba(255,255,255,1);
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  visibility: hidden;
  -webkit-transform: translateY(-100%);
  -ms-transform: translateY(-100%);
  transform: translateY(-100%);
  opacity: 0;
  -webkit-transition: opacity 0.3ms cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3ms cubic-bezier(0.455,0.03,0.515,0.955);
  overflow: hidden;
  z-index: -1;
}

.c0.drawer__content--open {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  visibility: visible;
  opacity: 1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
  height: 100vh;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
  overflow-x: hidden;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 60px;
  padding-left: 16px;
  position: relative;
  z-index: 5;
}

.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border: 0;
  outline: 0;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 60px;
  padding: 0 16px;
}

.c4 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: auto;
  height: 100%;
}

.c5 {
  position: absolute;
  right: 0;
  bottom: 0;
  height: 100%;
  width: auto;
}

.c2 {
  z-index: 1;
  width: 100%;
  background-image: linear-gradient(256deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
}

.c2.gradient--overlay:after,
.c2.gradient--underlay:after {
  height: 100%;
  content: "";
  top: 0;
  left: 0;
  right: 0;
  position: absolute;
}

.c2.gradient--underlay.gradient--spotlight:after {
  z-index: -1;
  opacity: 0.8;
  background-image: linear-gradient(256deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
}

.c2:not(.gradient--spotlight).gradient--overlay:after {
  z-index: 2;
  opacity: 0.4;
  background-image: linear-gradient(77deg,rgba(0,0,0,0),#000000);
}

.c2:not(.gradient--spotlight).gradient--underlay:after {
  z-index: -1;
  opacity: 0.8;
  background-image: linear-gradient(256deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
}

.c3 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  overflow: hidden;
}

.c9 {
  border-radius: 2px;
  overflow: hidden;
  height: 3px;
  background-color: rgba(255,255,255,1);
  width: 100%;
  display: block;
  -webkit-transition: all 300ms cubic-bezier(0.455,0.03,0.515,0.955);
  transition: all 300ms cubic-bezier(0.455,0.03,0.515,0.955);
}

.c9:before,
.c9:after {
  content: "";
  border-radius: 2px;
  height: 3px;
  background-color: rgba(255,255,255,1);
  width: 100%;
  display: block;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transform-origin: right center;
  -ms-transform-origin: right center;
  transform-origin: right center;
  -webkit-transition: -webkit-transform 300ms cubic-bezier(0.455,0.03,0.515,0.955), background-color 300ms cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: transform 300ms cubic-bezier(0.455,0.03,0.515,0.955), background-color 300ms cubic-bezier(0.455,0.03,0.515,0.955);
  transition: transform 300ms cubic-bezier(0.455,0.03,0.515,0.955), background-color 300ms cubic-bezier(0.455,0.03,0.515,0.955);
}

.c9:before {
  top: 0;
  left: 0;
}

.c9:after {
  bottom: 0;
  left: 0;
}

.nav--inverted .c9 {
  background-color: rgba(38,38,38,1);
}

.nav--inverted .c9:before,
.nav--inverted .c9:after {
  background-color: rgba(38,38,38,1);
}

.hamburger--opened .c9 {
  background-color: transparent;
}

.hamburger--opened .c9:before {
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.hamburger--opened .c9:after {
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c8 {
  height: 17px;
  width: 20px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media screen and (min-width:768px) {
  .c2 {
    background-image: linear-gradient(260deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
  }
}

@media screen and (min-width:1024px) {
  .c2 {
    background-image: linear-gradient(262deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
  }
}

@media screen and (min-width:1024px) {
  .c2.gradient--spotlight {
    box-shadow: inset 0 1px 40px 10px rgba(0,0,0,0.15);
  }
}

@media screen and (min-width:768px) {
  .c2.gradient--underlay.gradient--spotlight:after {
    background-image: linear-gradient(260deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
  }
}

@media screen and (min-width:1024px) {
  .c2.gradient--underlay.gradient--spotlight:after {
    background-image: linear-gradient(262deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
  }
}

@media screen and (min-width:768px) {
  .c2:not(.gradient--spotlight).gradient--overlay:after {
    background-image: linear-gradient(82deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:1024px) {
  .c2:not(.gradient--spotlight).gradient--overlay:after {
    background-image: linear-gradient(86deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:768px) {
  .c2:not(.gradient--spotlight).gradient--underlay:after {
    background-image: linear-gradient(260deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
  }
}

@media screen and (min-width:1024px) {
  .c2:not(.gradient--spotlight).gradient--underlay:after {
    background-image: linear-gradient(262deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="gradient--spotlight c2"
      style={
        Object {
          "height": "60px",
          "position": "relative",
        }
      }
    >
      <div
        className="c3"
      >
        <svg
          className="c4"
          preserveAspectRatio="xMinYMid meet"
          viewBox="0 0 1440 218"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <linearGradient
              id="a"
              x1="61.654%"
              x2="3.355%"
              y1="100%"
              y2="0%"
            >
              <stop
                offset="0%"
                stopColor="#024691"
              />
              <stop
                offset="52.996%"
                stopColor="#BADBFE"
              />
              <stop
                offset="100%"
                stopColor="#C56BFF"
              />
            </linearGradient>
            <linearGradient
              id="c"
              x1="74.395%"
              x2=".532%"
              y1="129.212%"
              y2="-28.101%"
            >
              <stop
                offset="0%"
                stopOpacity="0"
              />
              <stop
                offset="100%"
                stopOpacity=".4"
              />
              <stop
                offset="100%"
              />
              <stop
                offset="100%"
                stopOpacity=".4"
              />
            </linearGradient>
            <path
              d="M0 .748h138.365l1325.043 217.52H413.554z"
              id="b"
            />
          </defs>
          <g
            fill="none"
            fillRule="nonzero"
            opacity=".102"
            transform="translate(-20)"
          >
            <use
              fill="url(#a)"
              xlinkHref="#b"
            />
            <use
              fill="url(#c)"
              xlinkHref="#b"
            />
          </g>
        </svg>
        <svg
          className="c5"
          preserveAspectRatio="xMaxYMid meet"
          viewBox="0 0 476 218"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <linearGradient
              id="Angle-linearGradient-1"
              x1="21.6784013%"
              x2="53.474493%"
              y1="112.586732%"
              y2="23.9282924%"
            >
              <stop
                offset="0%"
                stopColor="#000000"
                stopOpacity="0"
              />
              <stop
                offset="100%"
                stopColor="#000000"
              />
              <stop
                offset="100%"
                stopColor="#000000"
              />
            </linearGradient>
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
            opacity="0.0490513393"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="url(#Angle-linearGradient-1)"
              fillRule="nonzero"
              transform="translate(-1016.000000, -184.000000)"
            >
              <g
                transform="translate(52.000000, 184.000000)"
              >
                <g
                  transform="translate(-20.000000, 0.000000)"
                >
                  <polygon
                    points="984.668337 0 1460 218 984.668337 218"
                    transform="translate(1222.334169, 109.000000) scale(-1, 1) translate(-1222.334169, -109.000000) "
                  />
                </g>
              </g>
            </g>
          </g>
        </svg>
      </div>
      <div
        className="c6"
      >
        <div />
        <button
          className="c7"
          onClick={undefined}
          type="button"
        >
          <span
            className="hamburger hamburger--closed c8"
          >
            <span
              className="c9"
            />
          </span>
        </button>
      </div>
    </span>
  </div>
</div>
`;

exports[`Drawer renders header elements 1`] = `
.c0 {
  background-color: rgba(38,38,38,1);
  color: rgba(255,255,255,1);
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  visibility: hidden;
  -webkit-transform: translateY(-100%);
  -ms-transform: translateY(-100%);
  transform: translateY(-100%);
  opacity: 0;
  -webkit-transition: opacity 0.3ms cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3ms cubic-bezier(0.455,0.03,0.515,0.955);
  overflow: hidden;
  z-index: -1;
}

.c0.drawer__content--open {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  visibility: visible;
  opacity: 1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
  height: 100vh;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
  overflow-x: hidden;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 60px;
  padding-left: 16px;
  position: relative;
  z-index: 5;
}

.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border: 0;
  outline: 0;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 60px;
  padding: 0 16px;
}

.c4 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: auto;
  height: 100%;
}

.c5 {
  position: absolute;
  right: 0;
  bottom: 0;
  height: 100%;
  width: auto;
}

.c2 {
  z-index: 1;
  width: 100%;
  background-image: linear-gradient(256deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
}

.c2.gradient--overlay:after,
.c2.gradient--underlay:after {
  height: 100%;
  content: "";
  top: 0;
  left: 0;
  right: 0;
  position: absolute;
}

.c2.gradient--underlay.gradient--spotlight:after {
  z-index: -1;
  opacity: 0.8;
  background-image: linear-gradient(256deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
}

.c2:not(.gradient--spotlight).gradient--overlay:after {
  z-index: 2;
  opacity: 0.4;
  background-image: linear-gradient(77deg,rgba(0,0,0,0),#000000);
}

.c2:not(.gradient--spotlight).gradient--underlay:after {
  z-index: -1;
  opacity: 0.8;
  background-image: linear-gradient(256deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
}

.c3 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  overflow: hidden;
}

.c9 {
  border-radius: 2px;
  overflow: hidden;
  height: 3px;
  background-color: rgba(255,255,255,1);
  width: 100%;
  display: block;
  -webkit-transition: all 300ms cubic-bezier(0.455,0.03,0.515,0.955);
  transition: all 300ms cubic-bezier(0.455,0.03,0.515,0.955);
}

.c9:before,
.c9:after {
  content: "";
  border-radius: 2px;
  height: 3px;
  background-color: rgba(255,255,255,1);
  width: 100%;
  display: block;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transform-origin: right center;
  -ms-transform-origin: right center;
  transform-origin: right center;
  -webkit-transition: -webkit-transform 300ms cubic-bezier(0.455,0.03,0.515,0.955), background-color 300ms cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: transform 300ms cubic-bezier(0.455,0.03,0.515,0.955), background-color 300ms cubic-bezier(0.455,0.03,0.515,0.955);
  transition: transform 300ms cubic-bezier(0.455,0.03,0.515,0.955), background-color 300ms cubic-bezier(0.455,0.03,0.515,0.955);
}

.c9:before {
  top: 0;
  left: 0;
}

.c9:after {
  bottom: 0;
  left: 0;
}

.nav--inverted .c9 {
  background-color: rgba(38,38,38,1);
}

.nav--inverted .c9:before,
.nav--inverted .c9:after {
  background-color: rgba(38,38,38,1);
}

.hamburger--opened .c9 {
  background-color: transparent;
}

.hamburger--opened .c9:before {
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.hamburger--opened .c9:after {
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c8 {
  height: 17px;
  width: 20px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media screen and (min-width:768px) {
  .c2 {
    background-image: linear-gradient(260deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
  }
}

@media screen and (min-width:1024px) {
  .c2 {
    background-image: linear-gradient(262deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
  }
}

@media screen and (min-width:1024px) {
  .c2.gradient--spotlight {
    box-shadow: inset 0 1px 40px 10px rgba(0,0,0,0.15);
  }
}

@media screen and (min-width:768px) {
  .c2.gradient--underlay.gradient--spotlight:after {
    background-image: linear-gradient(260deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
  }
}

@media screen and (min-width:1024px) {
  .c2.gradient--underlay.gradient--spotlight:after {
    background-image: linear-gradient(262deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
  }
}

@media screen and (min-width:768px) {
  .c2:not(.gradient--spotlight).gradient--overlay:after {
    background-image: linear-gradient(82deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:1024px) {
  .c2:not(.gradient--spotlight).gradient--overlay:after {
    background-image: linear-gradient(86deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:768px) {
  .c2:not(.gradient--spotlight).gradient--underlay:after {
    background-image: linear-gradient(260deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
  }
}

@media screen and (min-width:1024px) {
  .c2:not(.gradient--spotlight).gradient--underlay:after {
    background-image: linear-gradient(262deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="gradient--spotlight c2"
      style={
        Object {
          "height": "60px",
          "position": "relative",
        }
      }
    >
      <div
        className="c3"
      >
        <svg
          className="c4"
          preserveAspectRatio="xMinYMid meet"
          viewBox="0 0 1440 218"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <linearGradient
              id="a"
              x1="61.654%"
              x2="3.355%"
              y1="100%"
              y2="0%"
            >
              <stop
                offset="0%"
                stopColor="#024691"
              />
              <stop
                offset="52.996%"
                stopColor="#BADBFE"
              />
              <stop
                offset="100%"
                stopColor="#C56BFF"
              />
            </linearGradient>
            <linearGradient
              id="c"
              x1="74.395%"
              x2=".532%"
              y1="129.212%"
              y2="-28.101%"
            >
              <stop
                offset="0%"
                stopOpacity="0"
              />
              <stop
                offset="100%"
                stopOpacity=".4"
              />
              <stop
                offset="100%"
              />
              <stop
                offset="100%"
                stopOpacity=".4"
              />
            </linearGradient>
            <path
              d="M0 .748h138.365l1325.043 217.52H413.554z"
              id="b"
            />
          </defs>
          <g
            fill="none"
            fillRule="nonzero"
            opacity=".102"
            transform="translate(-20)"
          >
            <use
              fill="url(#a)"
              xlinkHref="#b"
            />
            <use
              fill="url(#c)"
              xlinkHref="#b"
            />
          </g>
        </svg>
        <svg
          className="c5"
          preserveAspectRatio="xMaxYMid meet"
          viewBox="0 0 476 218"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <linearGradient
              id="Angle-linearGradient-1"
              x1="21.6784013%"
              x2="53.474493%"
              y1="112.586732%"
              y2="23.9282924%"
            >
              <stop
                offset="0%"
                stopColor="#000000"
                stopOpacity="0"
              />
              <stop
                offset="100%"
                stopColor="#000000"
              />
              <stop
                offset="100%"
                stopColor="#000000"
              />
            </linearGradient>
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
            opacity="0.0490513393"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="url(#Angle-linearGradient-1)"
              fillRule="nonzero"
              transform="translate(-1016.000000, -184.000000)"
            >
              <g
                transform="translate(52.000000, 184.000000)"
              >
                <g
                  transform="translate(-20.000000, 0.000000)"
                >
                  <polygon
                    points="984.668337 0 1460 218 984.668337 218"
                    transform="translate(1222.334169, 109.000000) scale(-1, 1) translate(-1222.334169, -109.000000) "
                  />
                </g>
              </g>
            </g>
          </g>
        </svg>
      </div>
      <div
        className="c6"
      >
        <div>
          <span>
            Some Title Element
          </span>
        </div>
        <button
          className="c7"
          onClick={undefined}
          type="button"
        >
          <span
            className="hamburger hamburger--closed c8"
          >
            <span
              className="c9"
            />
          </span>
        </button>
      </div>
    </span>
    <span>
      Content
    </span>
  </div>
</div>
`;

exports[`Drawer renders multiple child elements 1`] = `
.c0 {
  background-color: rgba(38,38,38,1);
  color: rgba(255,255,255,1);
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  visibility: hidden;
  -webkit-transform: translateY(-100%);
  -ms-transform: translateY(-100%);
  transform: translateY(-100%);
  opacity: 0;
  -webkit-transition: opacity 0.3ms cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3ms cubic-bezier(0.455,0.03,0.515,0.955);
  overflow: hidden;
  z-index: -1;
}

.c0.drawer__content--open {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  visibility: visible;
  opacity: 1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
  height: 100vh;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
  overflow-x: hidden;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 60px;
  padding-left: 16px;
  position: relative;
  z-index: 5;
}

.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border: 0;
  outline: 0;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 60px;
  padding: 0 16px;
}

.c4 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: auto;
  height: 100%;
}

.c5 {
  position: absolute;
  right: 0;
  bottom: 0;
  height: 100%;
  width: auto;
}

.c2 {
  z-index: 1;
  width: 100%;
  background-image: linear-gradient(256deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
}

.c2.gradient--overlay:after,
.c2.gradient--underlay:after {
  height: 100%;
  content: "";
  top: 0;
  left: 0;
  right: 0;
  position: absolute;
}

.c2.gradient--underlay.gradient--spotlight:after {
  z-index: -1;
  opacity: 0.8;
  background-image: linear-gradient(256deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
}

.c2:not(.gradient--spotlight).gradient--overlay:after {
  z-index: 2;
  opacity: 0.4;
  background-image: linear-gradient(77deg,rgba(0,0,0,0),#000000);
}

.c2:not(.gradient--spotlight).gradient--underlay:after {
  z-index: -1;
  opacity: 0.8;
  background-image: linear-gradient(256deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
}

.c3 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  overflow: hidden;
}

.c9 {
  border-radius: 2px;
  overflow: hidden;
  height: 3px;
  background-color: rgba(255,255,255,1);
  width: 100%;
  display: block;
  -webkit-transition: all 300ms cubic-bezier(0.455,0.03,0.515,0.955);
  transition: all 300ms cubic-bezier(0.455,0.03,0.515,0.955);
}

.c9:before,
.c9:after {
  content: "";
  border-radius: 2px;
  height: 3px;
  background-color: rgba(255,255,255,1);
  width: 100%;
  display: block;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transform-origin: right center;
  -ms-transform-origin: right center;
  transform-origin: right center;
  -webkit-transition: -webkit-transform 300ms cubic-bezier(0.455,0.03,0.515,0.955), background-color 300ms cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: transform 300ms cubic-bezier(0.455,0.03,0.515,0.955), background-color 300ms cubic-bezier(0.455,0.03,0.515,0.955);
  transition: transform 300ms cubic-bezier(0.455,0.03,0.515,0.955), background-color 300ms cubic-bezier(0.455,0.03,0.515,0.955);
}

.c9:before {
  top: 0;
  left: 0;
}

.c9:after {
  bottom: 0;
  left: 0;
}

.nav--inverted .c9 {
  background-color: rgba(38,38,38,1);
}

.nav--inverted .c9:before,
.nav--inverted .c9:after {
  background-color: rgba(38,38,38,1);
}

.hamburger--opened .c9 {
  background-color: transparent;
}

.hamburger--opened .c9:before {
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.hamburger--opened .c9:after {
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c8 {
  height: 17px;
  width: 20px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media screen and (min-width:768px) {
  .c2 {
    background-image: linear-gradient(260deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
  }
}

@media screen and (min-width:1024px) {
  .c2 {
    background-image: linear-gradient(262deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
  }
}

@media screen and (min-width:1024px) {
  .c2.gradient--spotlight {
    box-shadow: inset 0 1px 40px 10px rgba(0,0,0,0.15);
  }
}

@media screen and (min-width:768px) {
  .c2.gradient--underlay.gradient--spotlight:after {
    background-image: linear-gradient(260deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
  }
}

@media screen and (min-width:1024px) {
  .c2.gradient--underlay.gradient--spotlight:after {
    background-image: linear-gradient(262deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
  }
}

@media screen and (min-width:768px) {
  .c2:not(.gradient--spotlight).gradient--overlay:after {
    background-image: linear-gradient(82deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:1024px) {
  .c2:not(.gradient--spotlight).gradient--overlay:after {
    background-image: linear-gradient(86deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:768px) {
  .c2:not(.gradient--spotlight).gradient--underlay:after {
    background-image: linear-gradient(260deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
  }
}

@media screen and (min-width:1024px) {
  .c2:not(.gradient--spotlight).gradient--underlay:after {
    background-image: linear-gradient(262deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="gradient--spotlight c2"
      style={
        Object {
          "height": "60px",
          "position": "relative",
        }
      }
    >
      <div
        className="c3"
      >
        <svg
          className="c4"
          preserveAspectRatio="xMinYMid meet"
          viewBox="0 0 1440 218"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <linearGradient
              id="a"
              x1="61.654%"
              x2="3.355%"
              y1="100%"
              y2="0%"
            >
              <stop
                offset="0%"
                stopColor="#024691"
              />
              <stop
                offset="52.996%"
                stopColor="#BADBFE"
              />
              <stop
                offset="100%"
                stopColor="#C56BFF"
              />
            </linearGradient>
            <linearGradient
              id="c"
              x1="74.395%"
              x2=".532%"
              y1="129.212%"
              y2="-28.101%"
            >
              <stop
                offset="0%"
                stopOpacity="0"
              />
              <stop
                offset="100%"
                stopOpacity=".4"
              />
              <stop
                offset="100%"
              />
              <stop
                offset="100%"
                stopOpacity=".4"
              />
            </linearGradient>
            <path
              d="M0 .748h138.365l1325.043 217.52H413.554z"
              id="b"
            />
          </defs>
          <g
            fill="none"
            fillRule="nonzero"
            opacity=".102"
            transform="translate(-20)"
          >
            <use
              fill="url(#a)"
              xlinkHref="#b"
            />
            <use
              fill="url(#c)"
              xlinkHref="#b"
            />
          </g>
        </svg>
        <svg
          className="c5"
          preserveAspectRatio="xMaxYMid meet"
          viewBox="0 0 476 218"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <linearGradient
              id="Angle-linearGradient-1"
              x1="21.6784013%"
              x2="53.474493%"
              y1="112.586732%"
              y2="23.9282924%"
            >
              <stop
                offset="0%"
                stopColor="#000000"
                stopOpacity="0"
              />
              <stop
                offset="100%"
                stopColor="#000000"
              />
              <stop
                offset="100%"
                stopColor="#000000"
              />
            </linearGradient>
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
            opacity="0.0490513393"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="url(#Angle-linearGradient-1)"
              fillRule="nonzero"
              transform="translate(-1016.000000, -184.000000)"
            >
              <g
                transform="translate(52.000000, 184.000000)"
              >
                <g
                  transform="translate(-20.000000, 0.000000)"
                >
                  <polygon
                    points="984.668337 0 1460 218 984.668337 218"
                    transform="translate(1222.334169, 109.000000) scale(-1, 1) translate(-1222.334169, -109.000000) "
                  />
                </g>
              </g>
            </g>
          </g>
        </svg>
      </div>
      <div
        className="c6"
      >
        <div />
        <button
          className="c7"
          onClick={undefined}
          type="button"
        >
          <span
            className="hamburger hamburger--closed c8"
          >
            <span
              className="c9"
            />
          </span>
        </button>
      </div>
    </span>
    <span>
      Content
    </span>
    <span>
      Content
    </span>
    <span>
      Content
    </span>
  </div>
</div>
`;

exports[`Drawer renders string header header 1`] = `
.c0 {
  background-color: rgba(38,38,38,1);
  color: rgba(255,255,255,1);
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  visibility: hidden;
  -webkit-transform: translateY(-100%);
  -ms-transform: translateY(-100%);
  transform: translateY(-100%);
  opacity: 0;
  -webkit-transition: opacity 0.3ms cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3ms cubic-bezier(0.455,0.03,0.515,0.955);
  overflow: hidden;
  z-index: -1;
}

.c0.drawer__content--open {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  visibility: visible;
  opacity: 1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
  height: 100vh;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
  overflow-x: hidden;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 60px;
  padding-left: 16px;
  position: relative;
  z-index: 5;
}

.c8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border: 0;
  outline: 0;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 60px;
  padding: 0 16px;
}

.c4 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: auto;
  height: 100%;
}

.c5 {
  position: absolute;
  right: 0;
  bottom: 0;
  height: 100%;
  width: auto;
}

.c2 {
  z-index: 1;
  width: 100%;
  background-image: linear-gradient(256deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
}

.c2.gradient--overlay:after,
.c2.gradient--underlay:after {
  height: 100%;
  content: "";
  top: 0;
  left: 0;
  right: 0;
  position: absolute;
}

.c2.gradient--underlay.gradient--spotlight:after {
  z-index: -1;
  opacity: 0.8;
  background-image: linear-gradient(256deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
}

.c2:not(.gradient--spotlight).gradient--overlay:after {
  z-index: 2;
  opacity: 0.4;
  background-image: linear-gradient(77deg,rgba(0,0,0,0),#000000);
}

.c2:not(.gradient--spotlight).gradient--underlay:after {
  z-index: -1;
  opacity: 0.8;
  background-image: linear-gradient(256deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
}

.c3 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  overflow: hidden;
}

.c7 {
  font-size: 16px;
  font-weight: 600;
  line-height: 1.5;
  text-transform: none;
  color: rgba(255,255,255,1);
}

.c10 {
  border-radius: 2px;
  overflow: hidden;
  height: 3px;
  background-color: rgba(255,255,255,1);
  width: 100%;
  display: block;
  -webkit-transition: all 300ms cubic-bezier(0.455,0.03,0.515,0.955);
  transition: all 300ms cubic-bezier(0.455,0.03,0.515,0.955);
}

.c10:before,
.c10:after {
  content: "";
  border-radius: 2px;
  height: 3px;
  background-color: rgba(255,255,255,1);
  width: 100%;
  display: block;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transform-origin: right center;
  -ms-transform-origin: right center;
  transform-origin: right center;
  -webkit-transition: -webkit-transform 300ms cubic-bezier(0.455,0.03,0.515,0.955), background-color 300ms cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: transform 300ms cubic-bezier(0.455,0.03,0.515,0.955), background-color 300ms cubic-bezier(0.455,0.03,0.515,0.955);
  transition: transform 300ms cubic-bezier(0.455,0.03,0.515,0.955), background-color 300ms cubic-bezier(0.455,0.03,0.515,0.955);
}

.c10:before {
  top: 0;
  left: 0;
}

.c10:after {
  bottom: 0;
  left: 0;
}

.nav--inverted .c10 {
  background-color: rgba(38,38,38,1);
}

.nav--inverted .c10:before,
.nav--inverted .c10:after {
  background-color: rgba(38,38,38,1);
}

.hamburger--opened .c10 {
  background-color: transparent;
}

.hamburger--opened .c10:before {
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.hamburger--opened .c10:after {
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c9 {
  height: 17px;
  width: 20px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media screen and (min-width:768px) {
  .c2 {
    background-image: linear-gradient(260deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
  }
}

@media screen and (min-width:1024px) {
  .c2 {
    background-image: linear-gradient(262deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
  }
}

@media screen and (min-width:1024px) {
  .c2.gradient--spotlight {
    box-shadow: inset 0 1px 40px 10px rgba(0,0,0,0.15);
  }
}

@media screen and (min-width:768px) {
  .c2.gradient--underlay.gradient--spotlight:after {
    background-image: linear-gradient(260deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
  }
}

@media screen and (min-width:1024px) {
  .c2.gradient--underlay.gradient--spotlight:after {
    background-image: linear-gradient(262deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
  }
}

@media screen and (min-width:768px) {
  .c2:not(.gradient--spotlight).gradient--overlay:after {
    background-image: linear-gradient(82deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:1024px) {
  .c2:not(.gradient--spotlight).gradient--overlay:after {
    background-image: linear-gradient(86deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:768px) {
  .c2:not(.gradient--spotlight).gradient--underlay:after {
    background-image: linear-gradient(260deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
  }
}

@media screen and (min-width:1024px) {
  .c2:not(.gradient--spotlight).gradient--underlay:after {
    background-image: linear-gradient(262deg,rgb(0,45,161),rgba(2,108,223,1) 55%,rgb(0,45,161));
  }
}

@media screen and (min-width:768px) {
  .c7 {
    font-size: 16px;
  }
}

@media screen and (min-width:1024px) {
  .c7 {
    font-size: 16px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="gradient--spotlight c2"
      style={
        Object {
          "height": "60px",
          "position": "relative",
        }
      }
    >
      <div
        className="c3"
      >
        <svg
          className="c4"
          preserveAspectRatio="xMinYMid meet"
          viewBox="0 0 1440 218"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <linearGradient
              id="a"
              x1="61.654%"
              x2="3.355%"
              y1="100%"
              y2="0%"
            >
              <stop
                offset="0%"
                stopColor="#024691"
              />
              <stop
                offset="52.996%"
                stopColor="#BADBFE"
              />
              <stop
                offset="100%"
                stopColor="#C56BFF"
              />
            </linearGradient>
            <linearGradient
              id="c"
              x1="74.395%"
              x2=".532%"
              y1="129.212%"
              y2="-28.101%"
            >
              <stop
                offset="0%"
                stopOpacity="0"
              />
              <stop
                offset="100%"
                stopOpacity=".4"
              />
              <stop
                offset="100%"
              />
              <stop
                offset="100%"
                stopOpacity=".4"
              />
            </linearGradient>
            <path
              d="M0 .748h138.365l1325.043 217.52H413.554z"
              id="b"
            />
          </defs>
          <g
            fill="none"
            fillRule="nonzero"
            opacity=".102"
            transform="translate(-20)"
          >
            <use
              fill="url(#a)"
              xlinkHref="#b"
            />
            <use
              fill="url(#c)"
              xlinkHref="#b"
            />
          </g>
        </svg>
        <svg
          className="c5"
          preserveAspectRatio="xMaxYMid meet"
          viewBox="0 0 476 218"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <linearGradient
              id="Angle-linearGradient-1"
              x1="21.6784013%"
              x2="53.474493%"
              y1="112.586732%"
              y2="23.9282924%"
            >
              <stop
                offset="0%"
                stopColor="#000000"
                stopOpacity="0"
              />
              <stop
                offset="100%"
                stopColor="#000000"
              />
              <stop
                offset="100%"
                stopColor="#000000"
              />
            </linearGradient>
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
            opacity="0.0490513393"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="url(#Angle-linearGradient-1)"
              fillRule="nonzero"
              transform="translate(-1016.000000, -184.000000)"
            >
              <g
                transform="translate(52.000000, 184.000000)"
              >
                <g
                  transform="translate(-20.000000, 0.000000)"
                >
                  <polygon
                    points="984.668337 0 1460 218 984.668337 218"
                    transform="translate(1222.334169, 109.000000) scale(-1, 1) translate(-1222.334169, -109.000000) "
                  />
                </g>
              </g>
            </g>
          </g>
        </svg>
      </div>
      <div
        className="c6"
      >
        <div>
          <div
            className="text text--light text--primary c7"
            disabled={false}
            size={
              Object {
                "large": "kilo",
                "medium": "kilo",
                "small": "kilo",
              }
            }
          >
            Some Title
          </div>
        </div>
        <button
          className="c8"
          onClick={undefined}
          type="button"
        >
          <span
            className="hamburger hamburger--closed c9"
          >
            <span
              className="c10"
            />
          </span>
        </button>
      </div>
    </span>
    Content
  </div>
</div>
`;
